--- a/_posts/2017-01-20-MADE18.md
+++ b/_posts/2017-01-20-MADE18.md
@@ -5,14 +5,23 @@ place: Odense
 date:   2018-01-25
 permalink: /made18-2017.html
 ---
-<span class="image featured"><img src="/images/posts/xp-2018.png" alt=""></span>
+<img class="img-fluid mx-auto d-block" src="/images/posts/xp-2018.png">
 
-[Saverio Giallorenzo](/people#sg) is co-chairing the follow-up workshop of the first International Workshop on Microservices for Agile software development (WMSA17) organized at XP2017. The venue is also a continuation of discussions on software engineering from the first International Conference on Microservices ([Microservices 2017](/microservices-2017.html) organized by the members of PLS. The workshop will be conducted in collaboration with the [Microservices Community](http://microservices.sdu.dk/), which was formed at the Microservices 2017 conference.
+[Saverio Giallorenzo](/people#sg) is co-chairing the [Second International Workshop on Microservices: Agile and DevOps Experience (MADE18)](https://sites.google.com/view/made18/) taking place on May 21st, 2018 and co-located with the [XP2018](https://www.agilealliance.org/xp2018/) conference in Porto, Portugal. 
+
+MADE18 is the follow-up workshop of the first International Workshop on
+Microservices for Agile software development (WMSA17) organized at XP2017. The
+venue is also a continuation of discussions on software engineering from the
+first International Conference on Microservices ([Microservices
+2017](/microservices-2017.html) organized by the members of PLS. The workshop
+will be conducted in collaboration with the [Microservices
+Community](http://microservices.sdu.dk/), which was formed at the Microservices
+2017 conference.
 
 <!--more-->
 
-In the last years, cloud-native architectures have emerged as a target platform for the deployment of microservice architectures. The migration of existing monoliths into cloud-native applications is still in the early phase, and only few companies already started their migrations. Therefore, success and failure stories about different approaches are not available in the literature. This context connects also to the recently discussed DevOps context where development and continuous deployment are closely linked.
-
-
-To address the current uncertainties including a limited documentation of best-practice and benefits, this workshop aims at collecting experiences on microservice adoption, reporting best practices, but also specially failure cases, so as to build a community knowledge based on previous errors and successes. The workshop is open to experience reports from practitioners and academia.
-
+Quoting the website call for papers:
+ 
+> In the last years, cloud-native architectures have emerged as a target platform for the deployment of microservice architectures. The migration of existing monoliths into cloud-native applications is still in the early phase, and only few companies already started their migrations. Therefore, success and failure stories about different approaches are not available in the literature. This context connects also to the recently discussed DevOps context where development and continuous deployment are closely linked.
+>
+> To address the current uncertainties including a limited documentation of best-practice and benefits, this workshop aims at collecting experiences on microservice adoption, reporting best practices, but also specially failure cases, so as to build a community knowledge based on previous errors and successes. The workshop is open to experience reports from practitioners and academia.
