switched to macro in templates

--- a/_posts/2016-12-20-MoM2016.md
+++ b/_posts/2016-12-20-MoM2016.md
@@ -8,7 +8,7 @@ permalink: /MoM2016.html
 
 <img class="img-fluid mx-auto d-block" src="/images/posts/meeting-on-microservices.png">
 
-Edition 2016 of the Meeting on Microservices (MoM2016) took place on December 20th, 2016. The event has been mainly organised by [ItalianaSoftware](http://www.italianasoftware.com/), a close industrial collaborator of {{ site.group_name }}.
+Edition 2016 of the Meeting on Microservices (MoM2016) took place on December 20th, 2016. The event has been mainly organised by [ItalianaSoftware](http://www.italianasoftware.com/), a close industrial collaborator of {{ site.group_short }}.
 
 <!--more-->
 
