--- a/_posts/2017-01-20-MADE18.md
+++ b/_posts/2017-01-20-MADE18.md
@@ -9,14 +9,8 @@ permalink: /made18-2017.html
 
 [Saverio Giallorenzo](/people#sg) is co-chairing the [Second International Workshop on Microservices: Agile and DevOps Experience (MADE18)](https://sites.google.com/view/made18/) taking place on May 21st, 2018 and co-located with the [XP2018](https://www.agilealliance.org/xp2018/) conference in Porto, Portugal. 
 
-MADE18 is the follow-up workshop of the first International Workshop on
-Microservices for Agile software development (WMSA17) organized at XP2017. The
-venue is also a continuation of discussions on software engineering from the
-first International Conference on Microservices ([Microservices
-2017](/microservices-2017.html) organized by the members of PLS. The workshop
-will be conducted in collaboration with the [Microservices
-Community](http://microservices.sdu.dk/), which was formed at the Microservices
-2017 conference.
+MADE18 is the follow-up workshop of the first International Workshop on Microservices for Agile software development (WMSA17) organized at XP2017. The venue is also a continuation of discussions on software engineering from the first International Conference on Microservices ([Microservices
+2017](/microservices-2017.html) organized by the members of {{ site.group_short }}. The workshop will be conducted in collaboration with the [Microservices Community](http://microservices.sdu.dk/), which was formed at the Microservices 2017 conference.
 
 <!--more-->
 
