--- a/_posts/2017-01-20-MADE18.md
+++ b/_posts/2017-01-20-MADE18.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title:  "Microservices: DevOps and Agile Experiences (MADE18)"
-place: Odense
+place:  Porto
 date:   2018-01-25
 permalink: /made18-2017.html
 ---
