draft SAC and some fixes

--- a/_posts/2016-12-20-MoM2016.md
+++ b/_posts/2016-12-20-MoM2016.md
@@ -1,9 +1,8 @@
 ---
 layout: post
 title: "First Edition of the Meeting on Microservices"
-place: Bologna
+place: Bologna, Italy
 date: 2017-01-25
-<!-- permalink: /MoM2016.html -->
 ---
 
 <img class="img-fluid mx-auto d-block" src="/images/posts/meeting-on-microservices.png">
