--- a/_posts/2017-01-20-MADE18.md
+++ b/_posts/2017-01-20-MADE18.md
@@ -1,9 +1,8 @@
 ---
 layout: post
 title:  "Microservices: Agile and DevOps Experiences (MADE18)"
-place:  Porto
+place:  Porto, Portugal
 date:   2018-01-25
-<!-- permalink: /made18-2017.html -->
 ---
 <img class="img-fluid mx-auto d-block" src="/images/posts/xp-2018.png">
 
