fixed some broken links

--- a/_posts/2017-01-20-MADE18.md
+++ b/_posts/2017-01-20-MADE18.md
@@ -6,7 +6,7 @@ date:   2018-01-25
 ---
 <img class="img-fluid mx-auto d-block" src="/images/posts/xp-2018.png">
 
-[Saverio Giallorenzo](/people#sg) is co-chairing the [Second International Workshop on Microservices: Agile and DevOps Experience (MADE18)](https://sites.google.com/view/made18/) taking place on May 21st, 2018 and co-located with the [XP2018](https://www.agilealliance.org/xp2018/) conference in Porto, Portugal. 
+[Saverio Giallorenzo](/people.html#sg) is co-chairing the [Second International Workshop on Microservices: Agile and DevOps Experience (MADE18)](https://sites.google.com/view/made18/) taking place on May 21st, 2018 and co-located with the [XP2018](https://www.agilealliance.org/xp2018/) conference in Porto, Portugal. 
 
 MADE18 is the follow-up workshop of the first International Workshop on Microservices for Agile software development (WMSA17) organized at XP2017. The venue is also a continuation of discussions on software engineering from the first International Conference on Microservices ([Microservices
 2017](/events/2017-10-25-Microservices_Conference) organized by the members of {{ site.group_short }}. The workshop will be conducted in collaboration with the [Microservices Community](http://microservices.sdu.dk/), which was formed at the Microservices 2017 conference.
