--- a/_posts/2018-04-17-ACMSAC18.md
+++ b/_posts/2018-04-17-ACMSAC18.md
@@ -8,6 +8,6 @@ date-end: 2018-04-13
 <img class="img-fluid mx-auto d-block" src="/images/posts/acmsac-2018.png">
 
 Our group presented works on choreographic programming and microservices at the [33<sup>rd</sup> ACM/SIGAPP Symposium On Applied Computing](https://www.sigapp.org/sac/sac2018/).
-[Marco Peressotti](/people#mp) gave a talk about communication abstractions in choreographic programming and [Janine Weber](https://www.linkedin.com/in/j-webs) presented a poster about patterns for failure handling in microservice programming (circuit breakers).
+[Marco Peressotti](/people.html#mp) gave a talk about communication abstractions in choreographic programming and [Janine Weber](https://www.linkedin.com/in/j-webs) presented a poster about patterns for failure handling in microservice programming (circuit breakers).
 
 <!--more-->
