--- a/_posts/2018-04-17-ACMSAC18.md
+++ b/_posts/2018-04-17-ACMSAC18.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "PSL @ ACM/SIGAPP Symposium On Applied Computing"
+title:  "CL @ ACM/SIGAPP Symposium On Applied Computing"
 place:  Pau, France
 date:   2018-04-09
 date-end: 2018-04-13
