--- a/_posts/2018-06-07-ordbogen.md
+++ b/_posts/2018-06-07-ordbogen.md
@@ -6,8 +6,7 @@ date:   2018-06-08
 ---
 <img class="img-fluid mx-auto d-block" src="/images/posts/ordbogen.jpg">
 
-On June 7th, [Fabrizio Montesi](/people.html#fm) and [Saverio Giallorenzo](/people.html#sg) took part in a meeting organised between the [Department of Computer Science and Engineering](https://imada.sdu.dk) (IMADA) at SDU and [Orgbogen](https://www.ordbogen.com/), the largest web-based dictionary company in Denmark.
+On June 7th, [Fabrizio Montesi](/people.html#fm) and [Saverio Giallorenzo](/people.html#sg) visited [Orgbogen](https://www.ordbogen.com/), the largest web-based dictionary company in Denmark, together with other researchers from the [Department of Mathematics and Computer Science](https://imada.sdu.dk) (IMADA) at SDU.
 
-The meeting regarded future collaborations to research and apply bleeding-edge
-Data Science and Cloud Computing techniques in Ordbogen's industrial
-settings. Ordbogen is also evaluating to run part of its future cloud infrastructure on the Danish National HPC Centre (Abacus 2.0 the supercomputer), hosted at the [eScience Center](escience.sdu.dk) at SDU.
+At the meeting, we discussed future collaborations on how the latest techniques in
+Data Science, Cloud Computing, and the Danish National HPC Centre at the SDU [eScience Center](escience.sdu.dk) (the supercomputer Abacus 2.0) can be applied to Ordbogen's setting.
