--- a/web/_posts/2018-08-07-lcf-icm.md
+++ b/web/_posts/2018-08-07-lcf-icm.md
@@ -6,6 +6,6 @@ date:   2018-08-07
 ---
 <img class="img-fluid mx-auto d-block" src="/images/posts/luis_icm.jpg">
 
-On August 7th, [Luìs Cruz-Filipe](/people.html#lcf) attended the prestigious International Congress of Mathematicians (ICM), joining a panel of world experts on the topic "[The strengths and flaws of machine-assisted proofs](http://www.icm2018.org/wp/2018/08/07/the-strengths-and-flaws-of-machine-assisted-proofs/)", on how computers can assist us in proving mathematical results/theorems. 
+On August 7th, [Luís Cruz-Filipe](/people.html#lcf) attended the prestigious International Congress of Mathematicians (ICM), joining a panel of world experts on the topic "[The strengths and flaws of machine-assisted proofs](http://www.icm2018.org/wp/2018/08/07/the-strengths-and-flaws-of-machine-assisted-proofs/)", on how computers can assist us in proving mathematical results/theorems. 
 
 ICM is the largest conference on mathematics. It is organised every four years and it is also renowned for its opening ceremony where the International Mathematical Union assigns the best awards in mathematics, among which the Nevanlinna Prize, the Gauss Prize, the Chern Medal, and the famous Fields Medal (the equivalent of a Nobel prize in Mathematics).
