--- a/web/_posts/2018-06-19-forte2018.md
+++ b/web/_posts/2018-06-19-forte2018.md
@@ -10,4 +10,6 @@ On June 19th, [Saverio Giallorenzo](/people.html#sg) presented the paper "[Appli
 
 In the paper, Giallorenzo, [Montesi](/people.html#fm), and Gabbrielli proposed a solution to mediate the discrepancies between theoretical works on choreographic programming and their implementations (like [Chor](http://www.chor-lang.org/) and [AIOCJ](http://www.cs.unibo.it/projects/jolie/aiocj.html)), where many undocumented, unproven adaptations, weaken the reliability of results at the formal level.
 
+<!-- more -->
+
 FORTE is part of the DisCoTec series of federated conferences along with COORDINATION, DAIS and the ICE workshop. This year it was held at the School of Computer Science (Facultad de Informática) of the University Complutense of Madrid.
