--- a/web/_posts/2016-12-20-MoM2016.md
+++ b/web/_posts/2016-12-20-MoM2016.md
@@ -7,7 +7,7 @@ date: 2017-01-25
 
 <img class="img-fluid mx-auto d-block" src="/images/posts/meeting-on-microservices.png">
 
-Edition 2016 of the Meeting on Microservices (MoM2016) took place on December 20th, 2016. The event has been mainly organised by [ItalianaSoftware](http://www.italianasoftware.com/), a close industrial collaborator of {{ site.group_short }}.
+Edition 2016 of the Meeting on Microservices (MoM2016) took place on December 20<sup>th</sup>, 2016. The event has been mainly organised by [ItalianaSoftware](http://www.italianasoftware.com/), a close industrial collaborator of {{ site.group_short }}.
 
 <!--more-->
 
