--- a/web/_posts/2018-04-17-ACMSAC18.md
+++ b/web/_posts/2018-04-17-ACMSAC18.md
@@ -7,7 +7,12 @@ date-end: 2018-04-13
 ---
 <img class="img-fluid mx-auto d-block" src="/images/posts/acmsac-2018.png">
 
-Our group presented works on choreographic programming and microservices at the [33<sup>rd</sup> ACM/SIGAPP Symposium On Applied Computing](https://www.sigapp.org/sac/sac2018/).
-[Marco Peressotti](/people.html#mp) gave a talk about communication abstractions in choreographic programming and [Janine Weber](https://www.linkedin.com/in/j-webs) presented a poster about patterns for failure handling in microservice programming (circuit breakers).
+On April 10<sup>th</sup>, [Marco Peressotti](/people.html#mp) gave a talk at the [33<sup>rd</sup> ACM/SIGAPP Symposium On Applied Computing](https://www.sigapp.org/sac/sac2018/) (SAC'18) about the paper "[Communications in Choreographies, Revisited](/publications.html#paper_CMP18)".
+On April 11<sup>th</sup>, [Janine Weber](https://www.linkedin.com/in/j-webs) presented a poster at SAC'18 about the paper "[From the decorator pattern to circuit breakers in microservices](/publications.html#paper_paper_DBLP:conf/sac/MontesiW18)".
 
 <!--more-->
+
+In "[Communications in Choreographies, Revisited](/publications.html#paper_CMP18)", [Luís Cruz-Filipe](/people.html#lcf), [Fabrizio Montesi](/people.html#fm), and [Marco Peressotti](/people.html#mp) propose a model of choreographic programming equipped with a primitive for <i>grouped interactions</i> that subsumes several communication patterns commonly used by real-world systems like multicast, scatter-gather, and atomic exchanges.
+Intuitively, grouped interactions can be thought of as being carried out as one single interaction. In practice, they are implemented by processes that carry them out in a concurrent fashion. After formalising the intuitive semantics of grouped interactions, the authors prove that choreographic programs and their implementations are correct and deadlock-free by construction.
+
+In "[From the decorator pattern to circuit breakers in microservices](/publications.html#paper_paper_DBLP:conf/sac/MontesiW18)", [Fabrizio Montesi](/people.html#fm) and [Janine Weber](https://www.linkedin.com/in/j-webs) analyse different deployment setups for circuit breaker, a design pattern for preventing cascading failures by guarding calls towards a target service. Then, they define a unifying implementation strategy in the setting of microservices, by using the Jolie programming language. Their implementation captures all setups with a single program, by interpreting a circuit breaker as a decorator that is generic on the interface of its target service.
