--- a/web/_posts/2018-05-21-MADE18.md
+++ b/web/_posts/2018-05-21-MADE18.md
@@ -6,7 +6,7 @@ date:   2018-05-21
 ---
 <img class="img-fluid mx-auto d-block" src="/images/posts/made18.jpg">
 
-On May 21st, 2018 [Saverio Giallorenzo](/people.html#sg) co-chaired the [Second International Workshop on Microservices: Agile and DevOps Experience (MADE18)](https://sites.google.com/view/made18/), co-located with the [XP2018](https://www.agilealliance.org/xp2018/) conference in Porto, Portugal.
+On May 21<sup>st</sup>, 2018 [Saverio Giallorenzo](/people.html#sg) co-chaired the [Second International Workshop on Microservices: Agile and DevOps Experience (MADE18)](https://sites.google.com/view/made18/), co-located with the [XP2018](https://www.agilealliance.org/xp2018/) conference in Porto, Portugal.
 The workshop has been a success, with 30+ attendees and highly participated presentations. 
 
 <!--more-->
