--- a/web/_posts/2018-06-19-forte2018.md
+++ b/web/_posts/2018-06-19-forte2018.md
@@ -6,7 +6,7 @@ date:   2018-06-19
 ---
 <img class="img-fluid mx-auto d-block" src="/images/posts/forte2018.jpg">
 
-On June 19th, [Saverio Giallorenzo](/people.html#sg) presented the paper "[Applied Choreographies](/publications.html#paper_GMG18)" at FORTE 2018.
+On June 19<sup>th</sup>, [Saverio Giallorenzo](/people.html#sg) presented the paper "[Applied Choreographies](/publications.html#paper_GMG18)" at FORTE 2018.
 
 <!--more-->
 
