--- a/web/_posts/2018-08-07-lcf-icm.md
+++ b/web/_posts/2018-08-07-lcf-icm.md
@@ -6,7 +6,7 @@ date:   2018-08-07
 ---
 <img class="img-fluid mx-auto d-block" src="/images/posts/luis_icm.jpg">
 
-On August 7th, [Luís Cruz-Filipe](/people.html#lcf) attended the prestigious International Congress of Mathematicians (ICM), joining a panel of world experts on the topic "[The strengths and flaws of machine-assisted proofs](http://www.icm2018.org/wp/2018/08/07/the-strengths-and-flaws-of-machine-assisted-proofs/)", on how computers can assist us in proving mathematical results/theorems. 
+On August 7<sup>th</sup>, [Luís Cruz-Filipe](/people.html#lcf) attended the prestigious International Congress of Mathematicians (ICM), joining a panel of world experts on the topic "[The strengths and flaws of machine-assisted proofs](http://www.icm2018.org/wp/2018/08/07/the-strengths-and-flaws-of-machine-assisted-proofs/)", on how computers can assist us in proving mathematical results/theorems. 
 
 <!--more-->
 
