--- a/web/_posts/2018-08-27-mauro-cp.md
+++ b/web/_posts/2018-08-27-mauro-cp.md
@@ -3,6 +3,7 @@ layout: post
 title:  "Jacopo Mauro wins the Silver Medal at the 2018 Minizinc Challenge"
 place:  Lille, France
 date:   2018-08-27
+tag: featured
 ---
 <img class="img-fluid mx-auto d-block" src="/images/posts/jm_minizinc.png">
 
