fixed microservices community link

--- a/web/_posts/2018-09-12-MiDOS.md
+++ b/web/_posts/2018-09-12-MiDOS.md
@@ -18,4 +18,4 @@ MiDOS is the first conference track focussed on Microservices and DevOps within 
 Our track aims to bring together researchers and practitioners having the common objective of transforming Service-Oriented, DevOps, and Microservice practices into a mature discipline with both solid scientific foundations and mature software engineering development methodologies supported by dedicated tools. In particular, we will encourage works and discussions about what (Micro)Services and DevOps still need in order to achieve their goal.
 </blockquote>
 
-MiDOS is organised in collaboration with the [Microservices Community](microservices.sdu.dk), of which the {{ site.group_name }} group is an active member.
+MiDOS is organised in collaboration with the [Microservices Community](https://microservices.sdu.dk), of which the {{ site.group_name }} group is an active member.
