--- a/web/_posts/2018-06-07-ordbogen.md
+++ b/web/_posts/2018-06-07-ordbogen.md
@@ -7,8 +7,8 @@ tag: featured
 ---
 <img class="img-fluid mx-auto d-block" src="/images/posts/ordbogen.jpg">
 
-On June 7<sup>th</sup>, [Fabrizio Montesi](/people.html#fm) and [Saverio Giallorenzo](/people.html#sg), visited [Orgbogen](https://www.ordbogen.com/), the largest web-based dictionary company in Denmark, together with other researchers from the [Department of Mathematics and Computer Science](https://imada.sdu.dk) (IMADA) at SDU.
+On June 7<sup>th</sup>, [Fabrizio Montesi](/people.html#fm) and [Saverio Giallorenzo](/people.html#sg), visited [Orgbogen](https://www.ordbogen.com/), the largest web-based dictionary company in Denmark, together with other researchers of the [Algorithms](http://algorithms.sdu.dk) and [Data Science and Statics](http://dss.sdu.dk) groups from the [Department of Mathematics and Computer Science](https://imada.sdu.dk) (IMADA), SDU.
 
 <!--more-->
 
-At the meeting, together with representatives from the [Algorithms](http://algorithms.sdu.dk) and [Data Science and Statics](http://dss.sdu.dk) groups at IMADA, we discussed future collaborations on how the latest techniques in Data Science, Cloud Computing, and the Danish National HPC Centre at the SDU [eScience Center](escience.sdu.dk) (the supercomputer Abacus 2.0) can be applied to Ordbogen's setting.
+At the meeting, we discussed future collaborations on how the latest techniques in Data Science, Cloud Computing, and the Danish National HPC Centre at the SDU [eScience Center](escience.sdu.dk) (the supercomputer Abacus 2.0) can be applied to Ordbogen's setting.
