--- a/web/_posts/2018-09-13-R-18.md
+++ b/web/_posts/2018-09-13-R-18.md
@@ -3,12 +3,13 @@ layout: post
 title: "Fabrizio Montesi invited expert at Robotics Technology Conference"
 place: Odense, Denmark
 date: 2018-09-13
+tag: featured
 ---
 
 <img class="img-fluid mx-auto d-block" src="/images/posts/r-18.jpg">
 
-On September 13<sup>th</sup>, [Fabrizio Montesi](/people.html#fm) joined a panel of experts at the [Robots Technology Conference](https://robotmesse.dk/en/). The panel discussed many aspects of the future of our working society, ranging from how artificial intelligence will impact production and the job market to how to create better conditions to attract and integrate international talents in Denmark.
+On September 13<sup>th</sup>, [Fabrizio Montesi](/people.html#fm) joined a panel of experts at the [Robotics Technology Conference](https://robotmesse.dk/en/). The panel discussed many aspects of the future of our society, ranging from how artificial intelligence will impact production and the job market, to how to create better conditions to attract and integrate international talents in Denmark.
 
 <!--more-->
 
-Part trade fair and part meeting venue, The Robots Technology Conference is a platform where interested companies and people can get concrete knowledge on business opportunities and on the proliferation of digitization, automation and robotics technology in industry.
+Part trade fair and part meeting venue, The Robotics Technology Conference is a platform where interested companies and people can get concrete knowledge on business opportunities and on the proliferation of digitization, automation, and robotics technology in industry.
