--- a/web/_posts/2018-09-13-R-18.md
+++ b/web/_posts/2018-09-13-R-18.md
@@ -8,7 +8,7 @@ tag: featured
 
 <img class="img-fluid mx-auto d-block" src="/images/posts/r-18.jpg">
 
-On September 13<sup>th</sup>, [Fabrizio Montesi](/people.html#fm) joined a panel of experts at the [Robotics Technology Conference](https://robotmesse.dk/en/). The panel discussed how to create better conditions
+On September 13<sup>th</sup>, [Fabrizio Montesi](/people.html#fm) joined a panel of experts at the [Robotics Technology Conference](https://robotmesse.dk/en/) on the topic "How do we attract the best brains?". The panel discussed how to create better conditions
 for the attraction and the integration of international talents in Denmark.
 
 <!--more-->
