--- a/web/_posts/2019-01-18-popl2019.md
+++ b/web/_posts/2019-01-18-popl2019.md
@@ -12,6 +12,6 @@ On Jannuary 18<sup>th</sup>, [Marco Peressotti](/people.html#mp) presented the p
 
 <!--more-->
 
-The paper by [Wen Kokke](http://wenkokke.github.io/), [Fabrizio Montesi](/people.html#fm), and Marco Peressotti introduced Hypersequent Classical Processes (HCP), a revised interpretation of the “Proofs as Processes” correspondence between linear logic and the π-calculus initially proposed by Abramsky [1994], and later developed by Bellin and Scott [1994], Caires and Pfenning [2010], and Wadler [2014], among others. HCP mends the discrepancies between linear logic and the syntax and observable semantics of parallel composition in the π-calculus, by conservatively extending linear logic to hyperenvironments (collections of environments, inspired by the hypersequents by Avron [1991]). 
+The paper by [Wen Kokke](http://wenkokke.github.io/), [Fabrizio Montesi](/people.html#fm), and Marco Peressotti introduced Hypersequent Classical Processes (HCP), a revised interpretation of the “Proofs as Processes” correspondence between linear logic and the π-calculus initially proposed by [Abramsky [1994]](https://doi.org/10.1016/0304-3975%2894%2900103-0), and later developed by [Bellin and Scott [1994]](https://doi.org/10.1016/0304-3975%2894%2900104-9), [Caires and Pfenning [2010]](https://doi.org/10.1007/978-3-642-15375-4_16), and [Wadler [2014]](https://doi.org/10.1017/S095679681400001X), among others. HCP mends the discrepancies between linear logic and the syntax and observable semantics of parallel composition in the π-calculus, by conservatively extending linear logic to hyperenvironments (collections of environments, inspired by the hypersequents by [Avron [1991]](https://doi.org/10.1007/BF01531058)). 
 
 The annual Symposium on Principles of Programming Languages is a forum for the discussion of all aspects of programming languages and programming systems. Both theoretical and experimental papers are welcome, on topics ranging from formal frameworks to experience reports. The main focus is on fundamental principles in the design, definition, analysis, and implementation of programming languages, programming systems, and programming interfaces.
