--- a/web/_posts/2020-03-05-lcfAI.md
+++ b/web/_posts/2020-03-05-lcfAI.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "Luís Cruz-Filipe interviewed by Forkenszone on the new frontiers of Artificial Intelligence"
+title:  "Luís Cruz-Filipe interviewed by Forskerzone on the new frontiers of Artificial Intelligence"
 place:  Odense, DK
 date:   2020-03-02
 ---
