--- a/web/_posts/2020-02-07-AAAI20.md
+++ b/web/_posts/2020-02-07-AAAI20.md
@@ -3,6 +3,7 @@ layout: post
 title:  "Hypothetical Answers to Continuous Queries over Data Streams @ AAAI 2020"
 place:  New York, US
 date:   2020-02-07
+tag: featured
 ---
 <img class="img-fluid mx-auto d-block" src="/images/posts/aaai2020.png">
 
