news: minizinc, conf on security standards

--- a/web/_posts/2019-10-02-mauro-cp.md
+++ b/web/_posts/2019-10-02-mauro-cp.md
@@ -11,4 +11,4 @@ tag: featured
 
 <!--more-->
 
-This is the fifth time Mauro stands on the MiniZinc podium thanks to the [Sunny-CP](/software.html#sunny-cp) Portfolio Solver. Previously, Mauro won the Silver medal in 2018, and the <em>gold medal</em> at editions 2015, 2016, and 2017 of the challenge.
+This is the fifth time Mauro stands on the MiniZinc podium thanks to the [Sunny-CP](/software.html#sunny-cp) Portfolio Solver. Previously, Mauro won the silver medal in 2018, and the <em>gold medal</em> at editions 2015, 2016, and 2017 of the challenge.
