--- a/web/_posts/2019-06-20-DisCoTec2019.md
+++ b/web/_posts/2019-06-20-DisCoTec2019.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "Concurrency and Logic group at DisCoTec 2019 (paper presentation and short talk)"
+title:  "ACP group at DisCoTec 2019 (paper presentation and short talk)"
 place:  Copenhagen, Denmark
 date:   2019-06-20
 ---
