--- a/web/_posts/2021-06-22-ECOOP21.md
+++ b/web/_posts/2021-06-22-ECOOP21.md
@@ -7,7 +7,7 @@ tag: featured
 ---
 <img class="img-fluid mx-auto d-block" src="/images/posts/ecoop2021.jpg">
 
-On the 22<sup>nd</sup> of June, the paper [_"Multiparty Languages: The Choreographic and Multitier Cases"_](/publications/#paper-GMPRSW21) by 
+On the 22<sup>nd</sup> of June, the paper [_"Multiparty Languages: The Choreographic and Multitier Cases"_](/publications/#paper_gmprsw21) by 
 [Fabrizio Montesi](/people.html#fm) and [Marco Peressotti](/people.html#mp) received a [Distinguished Paper Award](https://2021.ecoop.org/details/ecoop-2021-ecoop-research-papers/9/Multiparty-Languages-the-Choreographic-and-Multitier-Cases) at [ECOOP 2021](https://2021.ecoop.org/).
 
 <!--more-->
