--- a/web/_posts/2021-06-17-DigitalDays2021.md
+++ b/web/_posts/2021-06-17-DigitalDays2021.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "Lecture on Security by Design @ DisitalDays 2021"
+title:  "Lecture on Security by Design @ DigitalDays 2021"
 place:  Odense, Denmark
 date:   2021-06-17
 ---
